# temppath

./: .gitignore  README.md  pyproject.toml
temppath/: __init__.py  temppath.py
tests/: test_temppath.py
